--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# Articy Plugin
+# =====================================
+Assets/ArticyContent/Generated/
