--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.postprocessing": "2.2.2",
     "com.unity.probuilder": "4.4.0",
     "com.unity.purchasing.udp": "2.1.6",
+    "com.unity.recorder": "2.5.5",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "2.1.4",
     "com.unity.timeline": "1.2.18",
