Big push for IAP / UDP, other Unity services

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,7 +9,8 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.postprocessing": "2.2.2",
     "com.unity.probuilder": "4.4.0",
-    "com.unity.purchasing.udp": "2.1.6",
+    "com.unity.purchasing": "3.0.2",
+    "com.unity.purchasing.udp": "2.2.2",
     "com.unity.recorder": "2.5.5",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "2.1.4",
